eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-wallet-app-api-deployment
  labels:
    app: e-wallet-app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-wallet-app-api
  template:
    metadata:
      labels:
        app: e-wallet-app-api
    spec:
      containers:
      - name: e-wallet-app-api
        image: public.ecr.aws/n0w1k7c7/e-wallet-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
